cleanup; Updated green/purple color palettes

--- a/src/css/settings/colour.css
+++ b/src/css/settings/colour.css
@@ -57,15 +57,15 @@ section: Settings
   --red-800: #c62622;
   --red-900: #b71c1c;
 
-  --green-50:  #1bc5ac;
-  --green-100: #19b9a1;
-  --green-200: #17ac96;
-  --green-300: #15a08b;
-  --green-400: #139481;
-  --green-500: #118776;
-  --green-600: #107c6b;
-  --green-700: #0e7062;
-  --green-800: #0c6558;
+  --green-50:  #def6f3;
+  --green-100: #b6e7de;
+  --green-200: #94d7ca;
+  --green-300: #75c6b7;
+  --green-400: #5ab4a3;
+  --green-500: #42a291;
+  --green-600: #2e9080;
+  --green-700: #1e7f6f;
+  --green-800: #106c5e;
   --green-900: #0a5a4e;
 
   --purple-50:  #eaecf8;
