--- a/src/css/elements/typography.css
+++ b/src/css/elements/typography.css
@@ -67,9 +67,7 @@ section: Elements
   }
 }
 
-a {
-  color: var(--blue-700);
-}
+a { color: var(--color-link); }
 
 a[href^="http"] {
   cursor: pointer;
