--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -22,7 +22,7 @@
   &:--active { @apply --fade-in; }
 
   & .c-icon {
-    color: var(--color-page);
+    color: var(--color-text);
     height: var(--size-menu-icon);
     top: var(--offset-menu-icon) !important;
     width: var(--size-menu-icon);
@@ -117,63 +117,6 @@
   display: inline-block;
   position: relative;
   width: 100%;
-
-  & > .c-tab,
-  &.c-tab {
-    &::before {
-       @apply --triangle;
-       @apply --triangle-bottom;
-       border-width: 5px 4px 0;
-       content: "";
-       float: right;
-       margin: 3px 0 0 12px;
-       position: relative;
-       vertical-align: middle;
-    }
-  }
-
-  & > .c-button,
-  &.c-button {
-    border-bottom: var(--grey-200) 1px solid;
-    margin: 6px 0;
-    text-align: left;
-    text-transform: none;
-    width: 100%;
-
-    &::before {
-       @apply --triangle;
-       @apply --triangle-bottom;
-       border-width: 5px 4px 0;
-       color: var(--grey-600);
-       content: "";
-       float: right;
-       margin: 1em .5rem 1em .75rem;
-       position: relative;
-       transition: transform .3s ease;
-       vertical-align: middle;
-    }
-  }
-
-
-  &:--active {
-    & > .c-button,
-    &.c-button {
-      &::before {
-        transform: rotate(180deg);
-       }
-     }
-
-   }
-
-
-  & > .c-button--wide,
-  &.c-button--wide {
-    height: auto;
-    margin-left: 0;
-    margin-right: 0;
-    padding: 4px 16px;
-    text-align: left;
-  }
 }
 
 
