--- a/src/css/components/card.css
+++ b/src/css/components/card.css
@@ -11,7 +11,7 @@ section: Components
     background-color: var(--white);
     border-radius: 2px;
     box-shadow: var(--shadow-1);
-    color: var(--color-page);
+    color: var(--color-text);
     display: flex;
     flex-direction: column;
     font-size: var(--fontSize--semiNormal);
