--- a/src/css/untangled-ui-guide.css
+++ b/src/css/untangled-ui-guide.css
@@ -12,7 +12,7 @@ import: ../README.md
 .box--large,
 .box-nested,
 .box-row {
-  background-color: var(--purple-400);
+  background-color: var(--color-primary);
   color: var(--white);
   font-size: var(--fontSize--tiny);
   min-height: 2em;
@@ -22,9 +22,9 @@ import: ../README.md
   text-align: center;
 }
 
-.box-first { background-color: var(--purple-600); }
+.box-first { background-color: color(var(--black) a(25%)); }
 
-.box-nested { background-color: var(--purple-700); }
+.box-nested { background-color: color(var(--black) a(40%)); }
 
 .box--large { height: 5rem; }
 
@@ -122,13 +122,13 @@ import: ../README.md
   .o-footer { padding: 1em; }
 
   .o-header {
-    background-color: var(--purple-900);
+    background-color: var(--color-primary);
     color: var(--white);
     position: static;
   }
 
   .o-nav {
-    background-color: var(--purple-50);
+    background-color: color(var(--color-primary) a(50%));
     flex: 1 6 20%;
     order: 1;
   }
