cleanup; Fixed examples and regressions

--- a/src/css/components/badge.css
+++ b/src/css/components/badge.css
@@ -8,7 +8,7 @@
 }
 
 .c-badge {
-  background-color: var(--color-badge);
+  background-color: var(--color-badge--primary);
   border-radius: var(--borderRadius-badge);
   color: var(--color-badge--secondary);
   display: inline-block;
