--- a/src/css/components/checkbox.css
+++ b/src/css/components/checkbox.css
@@ -1,8 +1,3 @@
-/*---
-title: Checkbox
-section: Components
----*/
-
 :root {
   --color-checkbox: var(--grey-400);
   --color-checkbox--checked: var(--color-primary);
@@ -105,6 +100,7 @@ section: Components
 .c-checkbox.is-disabled:checked {
   & + label::after {
     background-color: var(--color-checkbox--disabled);
+    border-color: var(--color-checkbox--disabled);
    }
 }
 
